--- a/KS4027-KS4028.md
+++ b/KS4027-KS4028.md
@@ -158,23 +158,49 @@ micro:bit in file folder ![](media/img/a406c46e5f9ca845a8bbec1cf3a1d39e.png).
 <iframe width="560" height="315" src="https://www.youtube.com/embed/C7-UzQyuAQQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-| **Part 1**                                               |                                                                                                                                                                                                                                                                                                        |        |
-|----------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------|
-|  Components Needed                                       |  ![C:\\Users\\Administrator\\Desktop\\熊巍\\创客教育组\\项目\\新智能家居\\安装步骤\\安装图片\\！_第一部分.jpg！_第一部分](media/image/123d0bb2dd100c6a112fcab1e0dc2203.jpeg)                                                                                                                                 |        |
-|  Installation Diagram                                    | ![C:\\Users\\Administrator\\Desktop\\熊巍\\创客教育组\\项目\\新智能家居\\安装步骤\\安装图片\\！_第一部分安装.jpg！_第一部分安装](media/image/f598262f06657a3013ea7e890b6c3bf5.jpeg)                                                                                                                          |        |
-|  Prototype                                               | ![C:\\Users\\Administrator\\Desktop\\熊巍\\创客教育组\\项目\\新智能家居\\安装步骤\\安装图片\\！_第一部分完成.jpg！_第一部分完成](media/image/f4080989a9c22fab97bb7f84ff1509fb.jpeg) （wire up the 1602 LCD, as shown below） ![ef7d6ce5e6c7408c956d14399d8504e](media/image/0bae113cf2bd840be13265b24f0c326f.jpeg) |        |
-| **Part 2**                                               |                                                                                                                                                                                                                                                                                                        |        |
-|   Components Needed                                      |  ![C:\\Users\\Administrator\\Desktop\\熊巍\\创客教育组\\项目\\新智能家居\\安装步骤\\安装图片\\！_第二部分.jpg！_第二部分](media/image/242142caa5724135b985427f1b0e7ce9.jpeg)                                                                                                                                 |        |
-|    Installation Diagram                                  | ![C:\\Users\\Administrator\\Desktop\\熊巍\\创客教育组\\项目\\新智能家居\\安装步骤\\安装图片\\！_第二部分安装.jpg！_第二部分安装](media/image/b2e099af204a4bcb92a1b71d5abf5653.jpeg)                                                                                                                          |        |
-|    Prototype                                             | ![C:\\Users\\Administrator\\Desktop\\熊巍\\创客教育组\\项目\\新智能家居\\安装步骤\\安装图片\\！_第二部分完成.jpg！_第二部分完成](media/image/a2d5f6af77a253eede36f93b3cab82f1.jpeg)                                                                                                                          |        |
-| **Part 3**                                               |                                                                                                                                                                                                                                                                                                        |        |
-|  Components Needed                                       | ![C:\\Users\\Administrator\\Desktop\\熊巍\\创客教育组\\项目\\新智能家居\\安装步骤\\安装图片\\！_第三部分.jpg！_第三部分](media/image/ec801c1a812f6255ebd266a78ed20e4c.jpeg)                                                                                                                                  |        |
-|   Installation Diagram                                   |  ![C:\\Users\\Administrator\\Desktop\\熊巍\\创客教育组\\项目\\新智能家居\\安装步骤\\安装图片\\！_第三部分安装.jpg！_第三部分安装](media/image/a9b432e5c26a594bfbf81a1011071511.jpeg)                                                                                                                         |        |
-|   Prototype                                              |  ![C:\\Users\\Administrator\\Desktop\\熊巍\\创客教育组\\项目\\新智能家居\\安装步骤\\安装图片\\！_第三部分完成.jpg！_第三部分完成](media/image/c4505fa11b62de60ec16b00b25854a5d.jpeg)                                                                                                                         |        |
-| Adjust the angle of the servo controlling windows to 0°  | **Wiring：** Micro:bit Expansion Board                                                                                                                                                                                                                                                                 | Servo  |
-| GND                                                      | Brown Wire                                                                                                                                                                                                                                                                                             |        |
-| 5V                                                       | Red Wire                                                                                                                                                                                                                                                                                               |        |
-| S（9）                                                   | Orange Wire                                                                                                                                                                                                                                                                                            |        |
+
+**Part 1**
+
+Components Needed
+![](media/image/123d0bb2dd100c6a112fcab1e0dc2203.jpeg)
+
+Installation Diagram
+![](media/image/f598262f06657a3013ea7e890b6c3bf5.jpeg)
+
+Prototype
+![](media/image/f4080989a9c22fab97bb7f84ff1509fb.jpeg) （wire up the 1602 LCD, as shown below） ![](media/image/0bae113cf2bd840be13265b24f0c326f.jpeg) 
+
+**Part 2**
+
+Components Needed
+![](media/image/242142caa5724135b985427f1b0e7ce9.jpeg)
+
+Installation Diagram
+![](media/image/b2e099af204a4bcb92a1b71d5abf5653.jpeg)
+
+Prototype
+![](media/image/a2d5f6af77a253eede36f93b3cab82f1.jpeg)
+
+**Part 3**
+
+Components Needed
+![](media/image/ec801c1a812f6255ebd266a78ed20e4c.jpeg)
+
+
+Installation Diagram
+![](media/image/a9b432e5c26a594bfbf81a1011071511.jpeg)
+
+
+Prototype
+![](media/image/c4505fa11b62de60ec16b00b25854a5d.jpeg)
+
+
+| Adjust the angle of the servo controlling windows to 0°  | **Wiring：** Micro:bit Expansion Board | Servo  |
+|-|-|-|
+| GND                                                      | Brown Wire |        |
+| 5V                                                       | Red Wire |        |
+| S（9）                                                   | Orange Wire |        |
+
 
 Connect the main board with the shield and with the computer via USB cable;
 
